--- a/index.html
+++ b/index.html
@@ -5,41 +5,40 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!--site se torna responsivo para mob device-->
     <title>Bárbara Costa Baron</title>
     <link rel="stylesheet" href="./css/estilos.css">
+    <link href="https://fonts.googleapis.com/css2?family=Jost:ital,wght@0,400;1,300&family=Shadows+Into+Light&family=Source+Code+Pro:ital,wght@0,400;1,300&display=swap" rel="stylesheet">
 </head>
 <body>
     <header>
         <nav class="menu">
           <ul>
             <li><a href="#">Sobre</a></li>
-            <li><a href="#">Portfólio</a></li>
+            <li><a href="#">Projetos</a></li>
             <li><a href="#">Contato</a></li>
           </ul>
         </nav>
         <div>
           <h1 class="site-title">Bárbara Costa Baron</h1>
-          <h2 class="site-subtitle">Front-end Developer</h2>
+          <h2 class="site-subtitle">{front-end developer}</h2>
+          <h2 class="site-subtitle">{fitness instructor}</h2>
         </div>
       </header>
-      <section>
-        <h2 class="site-portfolio">Portfólio</h2>
-      </section>
-      <section class="container">
-        <figure>
-          <img class="img-portfolio" src='./img/ecommerce-credito-rupixendotcom-unsplash.jpg' alt="eCommerce">
-          <figcaption class="img-portfolio-letra">eCommerce</figcaption>
-        </figure>
-        <figure>
-          <img class="img-portfolio" src="./img/mobile-credito-caspar-camille-rubin-unsplash.jpg" alt="mobile">
-          <figcaption class="img-portfolio-letra">Mobile</figcaption>
-        </figure>
-        <figure>
-          <img class="img-portfolio" src="./img/web-design-credito-caleidico-unsplash.jpg" alt="web design">
-          <figcaption class="img-portfolio-letra">Web Design</figcaption>
-        </figure>
-        <figure>
-          <img class="img-portfolio" src="img/personal-projects-creditos-markus-winkler-unsplash.jpg" alt="projetos pessoais">
-          <figcaption class="img-portfolio-letra">Projetos Pessoais</figcaption>
-        </figure>
+      <section class="portfolio">
+        <h2>Projetos</h2>
+        <div class="grid">
+          <figure>
+            <img class="img-portfolio" src='./img/web-design-credito-caleidico-unsplash.jpg' alt="web-developer">
+            <figcaption>{web-developer}</figcaption>
+          </figure>
+          <figure>
+            <img class="img-portfolio" src="./img/front-end-student-creditos-arnold-francisca-unsplash.jpg" alt="front-end-student">
+            <figcaption>{front-end student}</figcaption>
+          </figure>
+          <figure>
+            <img class="img-portfolio" src="./img/sports-instructor-creditos-vince-fleming-unsplash.jpg" alt="sports-instructor">
+            <figcaption>{sports instructor}</figcaption>
+          </figure>
+         
+        </div>
       </section>
 </body>
 </html>
