--- a/index.html
+++ b/index.html
@@ -19,18 +19,18 @@
         </nav>
         <div class="titulos">
           <h1 class="site-title">Bárbara Costa Baron</h1>
-          <h2 class="site-subtitle">{front-end developer}</h2>
-          <h2 class="site-subtitle">{sports instructor}</h2>
+          <h2 class="site-subtitle">front-end developer</h2>
+          <h2 class="site-subtitle">sports instructor</h2>
         </div>        
       </header>      
       <section id="sobre"class="sobre container">
         <h2>Sobre</h2>
         <figure class="img-sobre">
-          <img src="./img/sobre-foto.png" alt="Bárbara Costa Baron">
+          <img src="./img/sobre-foto.jpg" alt="Bárbara Costa Baron">
         </figure>
 
         <p>
-          E aí galera! Me chamo Bárbara e sou formada em Educação Física, atualmente trabalho com crianças e idosos, dando aulas de iniciação esportiva, nada a ver com programação né?
+          E aí galera! Me chamo Bárbara e sou formada em Educação Física, atualmente trabalho com crianças e idosos ministrando aulas de iniciação esportiva, nada a ver com programação né?
         </p>
         <p>
           Bom, meu interesse por essa área surgiu faz pouco tempo num misto de curiosidade, vontade de mudança e de aprender algo novo, para, quem sabe, no futuro, atuar profissionalmente como desenvolvedora.
